[tool.poetry]
name = "rbf"
version = "0.1.0"
description = ""
authors = ["John Lalor <john.lalor@nd.edu>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
transformers = "^4.10.2"
tensorflow = "^2.6.0"
datasets = "^1.11.0"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
